--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vue": "^2.2.0",
     "vue-router": "^2.0.0",
     "vuex": "^2.0.0",
+    "vuex-persistedstate": "^2.4.2",
     "vuex-router-sync": "^4.0.0"
   },
   "devDependencies": {
